# lfsr-scramblers

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  alternativedeps.md  bench_detail.hpp  bench_lfsr.cpp  lfsr.hpp  lfsr_detail.hpp  lfsr_tap_list.hpp  plot.py  test_detail.hpp  test_lfsr.cpp  tune_lfsr.cpp
